Quoted image url

--- a/app/scss/modules/block2/block2.scss
+++ b/app/scss/modules/block2/block2.scss
@@ -38,7 +38,7 @@
       left: -158px;
       height: 374px;
       width: 706px;
-      background: url(../../../images/bloc2/image_background.png) no-repeat;
+      background: url("../../../images/bloc2/image_background.png") no-repeat;
       z-index: -1;
     }
 
