--- a/app/scss/modules/block4/block4.scss
+++ b/app/scss/modules/block4/block4.scss
@@ -1,7 +1,7 @@
 .block4 {
   margin-top: 192px;
   padding-bottom: 80px;
-  background: url(../../../images/bloc4/background.png) no-repeat 0 310px;
+  background: url("../../../images/bloc4/background.png") no-repeat 0 310px;
 
   &__content {
     .block-title {
