--- a/app/scss/modules/block1/block1.scss
+++ b/app/scss/modules/block1/block1.scss
@@ -14,7 +14,7 @@
       right: -61px;
       width: 903px;
       height: 100%;
-      background: url("../../../images/bloc1/image_bloc1.png") no-repeat;
+      background: url("../images/bloc1/image_bloc1.png") no-repeat;
       z-index: -1;
     }
   }
